<resources>
    <string name="app_name">Popular Movies</string>

    <string name="popular_tab_title_short">Popular</string>
    <string name="now_playing_tab_title_short">Now Playing</string>
    <string name="top_rated_tab_title_short">Top Rated</string>
    <string name="popular_tab_title_full">Popular Movies</string>
    <string name="now_playing_tab_title_full">Now Playing Movies</string>
    <string name="top_rated_tab_title_full">Top Rated Movies</string>
    <string name="popular_fragment_title">Popular Movies</string>
    <string name="now_playing_fragment_title">Now Playing Movies</string>
    <string name="top_rated_fragment_title">Top Rated Movies</string>
    <string name="search_results_activity_title">Search Results</string>
    <string name="movie_details_activity_title">Movie Details</string>

    <string name="fetch_status_loading">Loading&#8230;</string>
    <string name="fetch_status_failed">Check your internet connection and try again.\nTap to refresh</string>
    <string name="fetch_status_no_result_search">Sorry but we couldn\'t find any result matching your search.</string>

    <string name="single_vote">%d Vote</string>
    <string name="multiple_votes">%d Votes</string>
    <string name="popularity">Popularity</string>
    <string name="language">language</string>
    <string name="runtime_min">Runtime - %d min</string>

    <string name="search_hint">Search&#8230;</string>
    <string name="read_more">Read more&#8230;</string>
</resources>
