<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.dannyxmichaud.portfolio.popularmovies.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/persistent_search_holder_height"
            android:background="?attr/colorPrimary" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            style="@style/TabLayoutStyle">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_tab_title_short" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing_tab_title_short" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_tab_title_short" />

        </android.support.design.widget.TabLayout>

        <FrameLayout android:layout_height="match_parent"
            android:layout_width="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_shadow_height"
                android:background="@drawable/tab_shadow"/>

            <view
                android:id="@+id/view_pager"
                class="android.support.v4.view.ViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </LinearLayout>

    <com.arlib.floatingsearchview.FloatingSearchView
        android:id="@+id/floating_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/PersistentSearchBarStyle" />
</RelativeLayout>
